<resources>
    <string name="app_name">Tacos e Nachos</string>
    <string name="ola">Hola,</string>
    <string name="secretKeyCliWeb">f01b84e5dbb34074afb622905b77e624</string>
    <string name="facebook_app_id">3071621929602769</string>
    <string name="fb_login_protocol_scheme">fb3071621929602769</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="title_activity_adress">Map</string>
    <string name="home">Home</string>
    <string name="cardapio">Cardápio</string>
    <string name="pedidos">Pedidos</string>
    <string name="celular">Celular</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="add_end">Adicione um endereço</string>
    <string name="cpf">CPF</string>
    <string name="detail">Tortilla de trigo recheada com cubos empanados de frango, mix de queijos, frijoles e alface. Para dar um toque agridoce especial, geleia de pimenta com abacaxi.</string>
    <string name="bemvindo">Hola, seja bem-vindo(a) ao App do mejor restaurante de São Paulo. Sí, isso mesmo, o melhor hahaha. ¿No cree? Pois bem, a Tacos&amp;Nachos mostrará algo nuevo, desejado por muitos restaurantes, porém é conquistado por poucos, ou no caso, por nós. Siga em frente e mostraremos nuestro serviço!</string>
    <string name="delivery_slider">Sabe quando bate aquela preguiça ou então aquela famosa frase: sem tempo irmão? Não se preocupe, acá você poderá pedir a sua comida e receber onde estiver. ¡su casa és mi casa!</string>
    <string name="agende_slider">Nesta opção, você poderá agendar sua vinda e já escolher o prato que deseja comer, com isso, não perderá tempo na fila de espera aguardando algum lugar, uma maneira pratica de fazer sua reserva e ainda fazer seu pedido.</string>
    <string name="pecaaqui_slider">Está aqui? Ótimo, nesta área você poderá de forma rápida fazer seu pedido e em alguns minutos se deliciar com ele sem precisar pedir ao garçom! Prático, não acha?</string>
    <string name="tipo_de_produto">Tipo de produto</string>
    <string name="about_text">Pensada em demonstrar o melhor da culinária mexicana, Tacos e Nachos é um restaurante que visa o melhor conforto e acolhimento possível. Contamos com um espaço totalmente pensado na cultura, tanto virtualmente como fisicamente, para que o cliente se sinta no próprio México.</string>
    <string name="about_text2"><![CDATA[A história do Restaurante Tacos&Nachos começa em 1997, com duas lojas em Piracicaba, no interior de São Paulo. A escolha do nome se baseou no fato de ser um nome fácil de ser pronunciado e lembrado. A estratégia de crescimento foi iniciada a pouco tempo, com base na implementação de franquias. A partir de então, a empresa passou a seguir um bem-sucedido plano de expansão e contou com alguns importantes investimentos. Paulo Alberto tornou se sócio em 2009 e em 2019 a rede se mudou para Capital São Paulo (SP), tornando-se a única empresa da franquia Tacos&Nachos. Onde houve um enorme investimento tecnológico para que alcança se a metrópole inteira, sendo assim se tornando uma grande potência, tendo com objetivo levar o gosto especial de sua comida para todos.]]></string>
    <string name="procurar_endereco">Procurar endereço</string>
    <string name="confirmar_endereco">Confirmar endereço</string>
    <string name="descri">Descrição</string>
    <string name="adicionar_na_sacola">Adicionar na sacola</string>
    <string name="observacao">Observações</string>
    <string name="seu_pedido">Seu pedido</string>
    <string name="forma_de_pagamento">Forma de pagamento</string>
    <string name="cpf_na_nota_opcional">CPF na nota (opcional)</string>
    <string name="produtos">Produtos</string>
    <string name="descontos">Descontos</string>
    <string name="subtotal">Subtotal</string>
    <string name="valor_total">Valor total</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sms">Um SMS foi enviado ao número.</string>
    <string name="cod">Digite abaixo o código recebido:</string>
    <string name="item_add">Item adicionado na sacola</string>
    <string name="filtros">FILTROS</string>
    <string name="aplicar">APLICAR</string>
    <string name="faixa_de_pre_o">Faixa de preço:</string>
    <string name="tipo_de_pagamento">Tipo de pagamento</string>
    <string name="cartao_de_credito">Cartão de crédito</string>
    <string name="cartao_de_debito">Cartão de débito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="ok">OK</string>
    <string name="sobre_nos">Sobre nós</string>
    <string name="localizacao">Localização</string>
    <string name="mi_casa_es_su_casa">Mi casa es su casa</string>
    <string name="pe_a_e_receba_em_sua_casa">Peça e receba em sua casa</string>
    <string name="sin_tiempo_chavo">Sin tiempo chavo</string>
    <string name="peca_antes">Peça antes de chegar em nosso restaurante</string>
    <string name="estas_aca">¿Estas acá?</string>
    <string name="peca_restaurante">Peça se estiver em um dos nossos restaurantes</string>
    <string name="filtros_min">Filtros</string>
    <string name="ordenar">Ordenar</string>
    <string name="pratos">Pratos</string>
    <string name="bebidas">Bebidas</string>
    <string name="sobremesas">Sobremesas</string>
    <string name="meus_cupons">Meus cupons</string>
    <string name="empty_cupom">Você não possui cupons</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="complemento">Complemento</string>
    <string name="alterar_dados">Alterar dados</string>
    <string name="sacola_vazia">SACOLA VAZIA</string>
    <string name="sacola">SACOLA</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="cupons">Cupons</string>
    <string name="sobre">Sobre</string>
    <string name="log_out">Log out</string>
    <string name="maior_menor">Preço: Maior - Menor</string>
    <string name="menor_maior">Preço: Menor - Maior</string>
    <string name="endereco">Endereço</string>
    <string name="itens_bag">*Este pedido é baseado nos itens da sacola</string>
    <string name="qtd_lugares">Quantidade de lugares</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="bienvenido_chavo">Bienvenido, Chavo!</string>
    <string name="delivery">Delivery</string>
    <string name="agende_seu_pedido">Agende seu pedido</string>
    <string name="peca_aqui">Peça aqui</string>
    <string name="continuar_com_google">Continuar com Google</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>

</resources>