<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:elevation="7dp"
        app:cardElevation="7dp"
        app:cardMaxElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvOla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="60dp"
            android:fontFamily="@font/roboto"
            android:text="@string/sobre_nos"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAbout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSliderAbout"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tvTxtAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_text"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tvloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/localizacao"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLoc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                android:elevation="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                >

                <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rest_end"
                android:scaleType="centerCrop"
                />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/about_text2"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>